--- a/cems-api.yml
+++ b/cems-api.yml
@@ -454,6 +454,31 @@ paths:
         403:
           description: "Access token was authenticated but not authorized for this feature"
           
+  /company/{company_id}/organizational-unit:
+    get:
+      tags:
+        - "Company"
+      summary: "Get organizational unit information for a company"
+      description: ""
+      parameters:
+        - in: "path"
+          name: "company_id"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/OrgUnit"
+        401:
+          description: "Access token was not authenticated"
+        403:
+          description: "Access token was authenticated but not authorized for this feature"
+        404:
+          description: "Company not found"
+          
   /company/{company_id}/organizational-unit/list:
     get:
       tags:
@@ -2952,6 +2977,63 @@ definitions:
               type: "string"
               example: "Beginner"
               
+  OrgUnit:   
+    type: "object"
+    required: 
+      - "data"
+    properties: 
+      data:
+        type: "object"
+        required: 
+          - "id"
+          - "label"
+          - "children"
+        properties: 
+          id: 
+            type: "number"
+            example: 100
+          label: 
+            type: "string"
+            example: "Main Company"
+          children: 
+            type: "array"
+            items: 
+              type: "object"
+              properties: 
+                id: 
+                  type: "number"
+                  example: 101
+                label: 
+                  type: "string"
+                  example: "Northern Region"
+                children: 
+                  type: "array"
+                  items: 
+                    type: "object"
+                    properties: 
+                      id: 
+                        type: "number"
+                        example: 103
+                      label: 
+                        type: "string"
+                        example: "Southern Region"
+                      children: 
+                        type: "array"
+                        items: 
+                          type: "object"
+                          properties: 
+                            id: 
+                              type: "number"
+                              example: 104
+                            label: 
+                              type: "string"
+                              example: "Facility A"
+                            children: 
+                              type: "array"
+                              items: 
+                                type: "object"
+                              example: []
+  
   OrgUnitList:
     type: "object"
     required: 
