--- a/cems-api.yml
+++ b/cems-api.yml
@@ -229,6 +229,41 @@ paths:
         404:
           description: "Company not found"
           
+  /company/{company_id}/course/self-enroll:
+    post:
+      tags:
+        - "User"
+      summary: "Register a single course for an existing user"
+      description: ""
+      parameters:
+        - in: "path"
+          name: "company_id"
+          description: ""
+          required: true
+          type: "integer"
+          pattern: '\d+'
+        - name: "body"
+          in: "body"
+          description: ""
+          required: true
+          schema:
+            type: "object"
+            required: 
+              - "course_id"
+            properties: 
+              course_id: 
+                type: "string"
+                example: "9999"
+      responses:
+        200:
+          description: "Success"
+          schema:
+            $ref: "#/definitions/SelfEnroll"
+        401:
+          description: "Access token was not authenticated"
+        403:
+          description: "Access token was authenticated but not authorized for this feature"
+
   /company/{company_id}/course_type:
     get:
       tags:
@@ -2667,6 +2702,28 @@ definitions:
                 applicable_filters: 
                   type: "string"
                   example: "null"
+                  
+  SelfEnroll:
+    type: "object"
+    required: 
+      - "data"
+      - "messages"
+    properties: 
+      data: 
+        required: 
+          - "id"
+        properties: 
+          id: 
+            type: "number"
+            example: 6537723
+        type: "object"
+      messages: 
+        type: "array"
+        items: 
+          type: "string"
+        example: 
+          - "The Course was registered successfully!"
+
   CourseType:
     type: "object"
     required: 
